[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/client/ClientMain.gd" id="1_client"]

[node name="Main" type="Node"]
script = ExtResource("1_client")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConnectionPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="UI/ConnectionPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Connect to Server"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IPLabel" type="Label" parent="UI/ConnectionPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 70.0
offset_right = -20.0
offset_bottom = 90.0
grow_horizontal = 2
text = "Server IP Address:"

[node name="IPInput" type="LineEdit" parent="UI/ConnectionPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = 131.0
grow_horizontal = 2
placeholder_text = "127.0.0.1"

[node name="ConnectButton" type="Button" parent="UI/ConnectionPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 150.0
offset_right = -20.0
offset_bottom = 181.0
grow_horizontal = 2
text = "Connect"

[node name="StatusLabel" type="Label" parent="UI/ConnectionPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 210.0
offset_right = -20.0
offset_bottom = 280.0
grow_horizontal = 2
text = "Ready to connect"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GamePanel" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -60.0
offset_right = 210.0
offset_bottom = -10.0
grow_vertical = 0

[node name="StatusLabel" type="Label" parent="UI/GamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Connected to Server"
horizontal_alignment = 1
vertical_alignment = 1
